--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
@@ -50,6 +50,8 @@
     }
 
     .input-secondary {
+      flex-direction: column;
+      align-items: flex-start;
       input {
         padding: 15px 20px;
         font-size: 18px;
@@ -78,6 +80,7 @@
   }
 
   .button-wrapper {
+    margin-top: 8px;
     display: flex;
     justify-content: center;
     gap: 32px;
