Changed the structure of the channels collection in Firestore Database. Now there are only the userids saved and the other userdata comes from the users collection.

--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
@@ -3,12 +3,12 @@
       <span
         class="name"
         (click)="channelService.openProfileInfo(message?.user)"
-        >{{ message?.user?.userName }}</span
+        >{{ message?.userName }}</span
       >
       <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
     </div>
     <span class="message-own">{{ message?.content }}</span>
-    <div class="emoji-container d-none"></div>
+    <app-message-reactions [message]="message" *ngIf="message.reactions.length > 0"></app-message-reactions>
     <div class="thread-own" *ngIf="message?.thread && threadKeys.length > 0">
       <span
         (click)="
