--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-edit-description/channel-edit-description.component.html
@@ -13,7 +13,6 @@
   </div>
   <div class="created-by-container">
     <span>Erstellt von</span>
-    <span>{{ currentChannel?.admin?.userName }}</span>
+    <span>{{ adminUserName }}</span>  <!-- Hier wird der UserName angezeigt -->
   </div>
 </div>
-
