--- a/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.html
+++ b/src/app/main/main-message-area/message-area-header/channel-description/channel-display-description/channel-display-description.component.html
@@ -7,6 +7,6 @@
   <div class="blue-line"></div>
   <div class="created-by-container">
     <span>Erstellt von</span>
-    <span>{{ currentChannel?.admin?.userName }}</span>
+    <span>{{ adminUserName }}</span> <!-- Hier wird der Username des Admins angezeigt -->
   </div>
 </div>
