--- a/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.html
+++ b/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.html
@@ -9,12 +9,27 @@
       <div class="left-icons">
         <mat-icon class="material-symbols-outlined">add</mat-icon>
         <div class="grey-line"></div>
-        <mat-icon class="material-symbols-outlined">sentiment_satisfied</mat-icon>
+        <mat-icon class="material-symbols-outlined" [matMenuTriggerFor]="emojiMenu">sentiment_satisfied</mat-icon>
         <mat-icon class="material-symbols-outlined">alternate_email</mat-icon>
       </div>
       <mat-icon (click)="sendMessage()" class="send-icon">send</mat-icon>
     </div>
   </div>
+  <mat-menu xPosition="after" #emojiMenu>
+    <emoji-mart
+      title="Pick your emoji…"
+      emoji="point_up"
+      set="apple"
+      (emojiClick)="addEmoji($event)"
+      [totalFrequentLines]="2"
+      [native]="true"
+      [theme]="'light'"
+      [i18n]="{
+        search: 'Suche Emojis',
+        categories: { search: 'Suchergebnisse', recent: 'Neueste' }
+      }"
+    ></emoji-mart>
+</mat-menu>
 </section>
 
   
