Password required behaviour
Password will only be required if the user changes its email

--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
@@ -47,6 +47,7 @@
         type="password"
         [formControl]="passwordControl"
         placeholder="Bestätige dein Passwort"
+        [required]="!emailControl.invalid && editUserForm.value.email !== ''"
         *ngIf="!emailControl.invalid && editUserForm.value.email !== ''"
         [ngClass]="{
           'input-error': passwordControl.invalid && passwordControl.touched
