Change profile photo hardcode

--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
@@ -8,6 +8,7 @@
     src="{{ user.photoURL }}"
     alt=""
     matTooltip="Ändere dein Profilbild"
+    (click)="openEditAvatar()"
   />
   <div class="profile-info-name">
     <div class="name-edit">
