--- a/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
+++ b/src/app/main/main-message-area/message-area-header/message-area-header.component.scss
@@ -91,6 +91,9 @@ mat-toolbar {
     height: 40px;
     border-radius: 30px;
     border: 2px solid white;
+  }
+
+  div {
     margin-right: -10px;
   }
 
