--- a/src/app/main/main-message-area/thread/thread-header/thread-header.component.scss
+++ b/src/app/main/main-message-area/thread/thread-header/thread-header.component.scss
@@ -25,14 +25,14 @@ div {
         font-size: 14px;
     }
 
-    svg {
+    mat-icon {
         color: var(--purple2-color);
         width: 16px;
         height: 16px;
     }
 }
 
-mat-icon {
+.close-icon {
     width: 24px;
     height: 24px;
     border-radius: 30px;
