--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -7,35 +7,50 @@
     ></textarea>
     <div class="icons-container">
       <div class="left-icons">
-        <mat-icon
-          class="material-symbols-outlined"
-          >add</mat-icon
-        >
+        <mat-icon class="material-symbols-outlined"
+        [matMenuTriggerFor]="uploadMethodMenu"
+        (click)="toggleBorder('upload')"
+        >add</mat-icon>
         <div class="grey-line"></div>
         <mat-icon
           class="material-symbols-outlined"
           [matMenuTriggerFor]="emojiMenu"
-          >sentiment_satisfied</mat-icon
+          (click)="toggleBorder('emoji')"
+          >sentiment_satisfied
+          </mat-icon
         >
-        <mat-icon class="material-symbols-outlined">alternate_email</mat-icon>
+        <mat-icon
+          class="material-symbols-outlined"
+          [matMenuTriggerFor]="mentionMenu"
+          (click)="toggleBorder('mention')"
+          >alternate_email</mat-icon>
       </div>
       <mat-icon (click)="sendMessage()">send</mat-icon>
     </div>
   </div>
 
-  <mat-menu xPosition="after" #emojiMenu>
-      <emoji-mart
-        title="Pick your emoji…"
-        emoji="point_up"
-        set="apple"
-        (emojiClick)="addEmoji($event)"
-        [totalFrequentLines]="2"
-        [native]="true"
-        [theme]="'light'"
-        [i18n]="{
-          search: 'Suche Emojis',
-          categories: { search: 'Suchergebnisse', recent: 'Neueste' }
-        }"
-      ></emoji-mart>
+  <mat-menu xPosition="after" #uploadMethodMenu yPosition="above">
+    <app-upload-method-selector></app-upload-method-selector>
+  </mat-menu>
+
+  <mat-menu xPosition="after" #emojiMenu yPosition="above">
+    <emoji-mart
+      title="Pick your emoji…"
+      emoji="point_up"
+      set="apple"
+      (emojiClick)="addEmoji($event)"
+      [totalFrequentLines]="2"
+      [native]="true"
+      [theme]="'light'"
+      [i18n]="{
+        search: 'Suche Emojis',
+        categories: { search: 'Suchergebnisse', recent: 'Neueste' }
+      }"
+    ></emoji-mart>
+  </mat-menu>
+
+  <!-- Mention Menu -->
+  <mat-menu xPosition="after" #mentionMenu yPosition="above">
+    <app-mention-user (mentionUser)="insertMention($event)"></app-mention-user>
   </mat-menu>
 </section>
