--- a/src/styles.scss
+++ b/src/styles.scss
@@ -244,6 +244,11 @@ mat-icon {
   }
 }
 
+textarea, input {
+  font-family: var(--font-nunito) !important;
+  font-size: 16px !important;
+}
+
 /* FONTS */
 /* nunito-200 - latin */
 @font-face {
