Added some functions to allow the user to edit own messages in privatechat.

--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -20,6 +20,7 @@
           </mat-icon
         >
         <mat-icon
+        *ngIf="privateChatId === undefined"
           class="material-symbols-outlined"
           [matMenuTriggerFor]="mentionMenu"
           (click)="toggleBorder('mention')"
