Change user name separately

--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.html
@@ -12,11 +12,26 @@
   />
   <div class="profile-info-name">
     <div class="name-edit">
-      <mat-icon class="material-symbols-outlined">account_circle</mat-icon>
-      <h3>Vollständiger Name</h3>
+      <div class="wrapper">
+        <mat-icon class="material-symbols-outlined">account_circle</mat-icon>
+        <h3>Vollständiger Name</h3>
+      </div>
+
+      <span
+        *ngIf="
+          nameControl.disabled && nameControl.value === '';
+          else saveNameChanges
+        "
+        (click)="nameControl.enable()"
+        >Bearbeiten</span
+      >
+      <ng-template #saveNameChanges>
+        <span #saveNameChanges (click)="saveNewName()">Speichern</span>
+      </ng-template>
     </div>
     <div class="input-secondary">
       <input
+        #nameInput
         type="text"
         [formControl]="nameControl"
         placeholder="{{ user.displayName }}"
@@ -24,6 +39,8 @@
           'input-error': nameControl.invalid
         }"
         (keypress)="blockNumbers($event)"
+        (keydown.enter)="saveNewName()"
+        [ngStyle]="nameControl.enable"
       />
       <div *ngIf="nameControl.invalid" class="error-message">
         <ng-container *ngIf="nameControl.hasError('fullName')">
@@ -34,8 +51,11 @@
   </div>
   <div class="profile-info-name">
     <div class="name-edit">
-      <mat-icon>mail_outline</mat-icon>
-      <h3>E-Mail-Adresse</h3>
+      <div class="wrapper">
+        <mat-icon>mail_outline</mat-icon>
+        <h3>E-Mail-Adresse</h3>
+      </div>
+      <span>Bearbeiten</span>
     </div>
     <div class="input-secondary">
       <input
@@ -54,7 +74,6 @@
         [formControl]="passwordControl"
         placeholder="Bestätige dein Passwort"
         [required]="!emailControl.invalid && editUserForm.value.email !== ''"
-        *ngIf="!emailControl.invalid && editUserForm.value.email !== ''"
         [ngClass]="{
           'input-error': passwordControl.invalid && passwordControl.touched
         }"
@@ -79,15 +98,5 @@
 
   <div class="button-wrapper">
     <button class="button-primary" (click)="closeDialog()">Abbrechen</button>
-    <button
-      class="button-primary"
-      (click)="applyChanges()"
-      [disabled]="
-        !editUserForm.valid ||
-        (editUserForm.value.name === '' && editUserForm.value.email === '')
-      "
-    >
-      Speichern
-    </button>
   </div>
 </mat-card>
