--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
@@ -42,9 +42,14 @@
 
     .name-edit {
       display: flex;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
-      gap: 18px;
+
+      .wrapper {
+        display: flex;
+        align-items: center;
+        gap: 18px;
+      }
 
       span {
         color: var(--purple3-color);
