Added the add reaction funtion to the privatechat. Also corrected the edit message function. The edited message will be saved now in both users.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -45,6 +45,6 @@
     </div>
   </div>
   <mat-menu xPosition="after" #emojiMenu>
-    <app-emoji-picker [message]="message"></app-emoji-picker>
+    <app-emoji-picker [message]="message" [component]="'channel'"></app-emoji-picker>
   </mat-menu>
 </section>
