--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-template.component.html
@@ -84,6 +84,6 @@
   </div>
 
   <mat-menu xPosition="after" #emojiMenu>
-    <app-emoji-picker [message]="message"></app-emoji-picker>
+    <app-emoji-picker [message]="message" [component]="'channel'"></app-emoji-picker>
   </mat-menu>
 </section>
