--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -1,6 +1,7 @@
 ::ng-deep {
   .mat-mdc-menu-panel {
     overflow: hidden !important;
+    max-width: none !important;
   }
 
   emoji-mart-anchors {
