--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
@@ -4,5 +4,5 @@
     <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
   </div>
   <span class="message-own">{{ message?.content }}</span>
-  <div class="emoji-container d-none"></div>
+  <app-message-reactions [message]="message" *ngIf="message.reactions.length > 0"></app-message-reactions>
 </section>
