--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-template.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-template.component.scss
@@ -1,3 +1,10 @@
+::ng-deep {
+  .mat-mdc-menu-panel {
+    max-width: none !important;
+    border-radius: 0px 30px 30px 30px !important;
+  }
+}
+
 section {
   flex-grow: 1;
   display: flex;
