--- a/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/edit-dialog/edit-dialog.component.scss
@@ -15,9 +15,17 @@
     align-items: center;
 
     mat-icon {
-      color: black;
+      height: 40px;
+      width: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 30px;
+
       &:hover {
         cursor: pointer;
+        color: var(--purple1-color);
+        background-color: var(--bg-color);
       }
     }
   }
@@ -56,6 +64,7 @@
 
         &:hover {
           cursor: pointer;
+          font-weight: 700;
         }
       }
     }
