--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -27,7 +27,11 @@
         <mat-chip-row (removed)="remove(user)">
           <img src="{{ user.photoURL }}" alt="" />
           {{ user.userName }}
-          <button matChipRemove [attr.aria-label]="'remove ' + user">
+          <button
+            *ngIf="user.userId !== userData.uid"
+            matChipRemove
+            [attr.aria-label]="'remove ' + user"
+          >
             <mat-icon>close</mat-icon>
           </button>
         </mat-chip-row>
