--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.scss
@@ -105,6 +105,14 @@
     }
   }
 
+  .mat-mdc-standard-chip .mdc-evolution-chip__cell--primary,
+  .mat-mdc-standard-chip .mdc-evolution-chip__action--primary,
+  .mat-mdc-standard-chip .mat-mdc-chip-action-label {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
   .cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above)
     div.mat-mdc-autocomplete-panel {
     border-radius: 20px !important;
