--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -74,10 +74,11 @@ section {
   height: 100%;
   justify-content: center;
   padding: 20px 20px;
+  flex-direction: row;
 }
 
 .textarea-container {
-  width: 100%;
+  flex-grow: 1;
   height: 100%;
   min-height: 150px;
   display: flex;
@@ -150,4 +151,31 @@ textarea {
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   height: 350px;
+}
+
+mat-sidenav-container {
+  border-radius: 30px;
+  right: auto;
+  left: 0px;
+  height: 100%;
+}
+
+mat-sidenav {
+  width: 200px;
+  background-color: var(--text-color);
+  box-shadow: 0px 2px 2px 0px #00000014;
+}
+
+mat-sidenav-content {
+  height: 100%;
+  width: 0;
+  border-radius: 30px;
+}
+
+app-attachment-preview {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
