--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
@@ -1,25 +1,39 @@
 <section class="text-container">
-    <div class="name-and-time-own">
-      <span
-        class="name"
-        (click)="channelService.openProfileInfo(message?.user)"
-        >{{ message?.userName }}</span
-      >
-      <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
+  <div class="name-and-time-own">
+    <span
+      class="name"
+      (click)="channelService.openProfileInfo(message?.user)"
+      >{{ message?.userName }}</span
+    >
+    <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
+  </div>
+  <span class="message-own">
+    {{ message?.content }}
+    <div *ngIf="message?.attachmentUrls?.length > 0">
+      <a *ngFor="let attachmentUrl of message.attachmentUrls" [href]="attachmentUrl">
+        <app-attachment-preview 
+          [actualAttachmentUrls]="[attachmentUrl]">
+        </app-attachment-preview>
+      </a>
     </div>
-    <span class="message-own">{{ message?.content }}</span>
-    <app-message-reactions [message]="message" *ngIf="message.reactions.length > 0"></app-message-reactions>
-    <div class="thread-own" *ngIf="message?.thread && threadKeys.length > 0">
-      <span
-        (click)="
-          mainMessageArea.openSidenav();
-          threadService.setActualMessage(message.thread)
-        "
-      >
-      {{ threadKeys.length }} {{ threadKeys.length === 1 ? 'Antwort' : 'Antworten' }}
-      </span>
-      <span
-        >Letzte Antwort: {{ getLastReplyTime(message.thread) }}</span
-      >
-    </div>
-  </section>
+  </span>
+  
+  
+
+  <app-message-reactions
+    [message]="message"
+    *ngIf="message.reactions.length > 0"
+  ></app-message-reactions>
+  <div class="thread-own" *ngIf="message?.thread && threadKeys.length > 0">
+    <span
+      (click)="
+        mainMessageArea.openSidenav();
+        threadService.setActualMessage(message.thread)
+      "
+    >
+      {{ threadKeys.length }}
+      {{ threadKeys.length === 1 ? "Antwort" : "Antworten" }}
+    </span>
+    <span>Letzte Antwort: {{ getLastReplyTime(message.thread) }}</span>
+  </div>
+</section>
